--- a/13_ensemble/13_03_kaggle_ensemble.ipynb
+++ b/13_ensemble/13_03_kaggle_ensemble.ipynb
@@ -399,7 +399,12 @@
     "\n",
     "cv = StratifiedShuffleSplit(Y_train, n_iter=5, test_size=0.2)\n",
     "grid = GridSearchCV(svm.SVC(), param_grid=param_grid, cv=cv)\n",
-    "grid.fit(X_train, Y_train)  "
+    "grid.fit(X_train, Y_train)  \n",
+    "C_range = np.logspace(-3, 10, 13) \n",
+    "gamma_range = np.logspace(-13, 3, 13) \n",
+    "kernel_range=[\"linear\",\"rbf\",\"poly\"]\n",
+    "param_grid = dict(gamma=gamma_range, C=C_range,kernel=kernel_range)\n",
+    "param_grid"
    ]
   },
   {
