--- a/13_ensemble/13_03_kaggle_ensemble.ipynb
+++ b/13_ensemble/13_03_kaggle_ensemble.ipynb
@@ -428,6 +428,20 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "model_extratrees = ExtraTreesClassifier(n_estimators=10, max_depth=None,min_samples_split=1, random_state=0)\n",
+    "scores = cross_val_score(model_extratrees, X_train, Y_train)\n",
+    "scores.mean() > 0.999"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# test/score"
    ]
   },
