--- a/13_ensemble/13_03_kaggle_ensemble.ipynb
+++ b/13_ensemble/13_03_kaggle_ensemble.ipynb
@@ -430,8 +430,8 @@
    "source": [
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "model_extratrees = ExtraTreesClassifier(n_estimators=10, max_depth=None,min_samples_split=1, random_state=0)\n",
-    "scores = cross_val_score(model_extratrees, X_train, Y_train)\n",
-    "scores.mean() > 0.999"
+    "cv_extratrees = cross_val_score(model_extratrees, X_train, Y_train)\n",
+    "cv_extratrees.mean() > 0.999"
    ]
   },
   {
